# driving-distances

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.docker/db/: Dockerfile  init.sql
.docker/job/: Dockerfile
.docker/nginx/: default.conf
.docker/service/: Dockerfile
.k8s/definitions/: api.yml  config.yml  job.yml  mysql.yml
.k8s/templates/: input.yml  secrets.yml
api/: pyproject.toml
api/api/: repositories.py  service.py  validator.py
api/tests/: conftest.py  repository_test.py  service_test.py  validator_test.py
ddmc/: README.md  pyproject.toml
ddmc/ddmc/: main.py  pipeline.py
ddmc/ddmc/extractors/: __init__.py  csv.py  osm.py
ddmc/ddmc/loaders/: __init__.py  csv.py  mysql.py  shared.py
ddmc/ddmc/transformers/: __init__.py  osm.py  trip_segments.py
ddmc/tests/: __init__.py  conftest.py  pipeline_test.py
ddmc/tests/extractors/: csv_test.py  osm_test.py
ddmc/tests/loaders/: conftest.py  csv_test.py  mysql_test.py
ddmc/tests/transformers/: osm_test.py  trip_segments_test.py
input/: bern.csv
job/: main.py  setup.py
job/ddmc/: pipeline.py
job/ddmc/extractors/: default_extractor.py  osm.py
job/ddmc/loaders/: csv.py  mysql.py
job/ddmc/transformers/: osm.py  trip_segments.py
job/tests/: pipeline_test.py
job/tests/extractors/: data_loader_test.py  osm_test.py
job/tests/loaders/: csv_test.py  mysql_test.py
job/tests/transformers/: osm_test.py  trip_segments_test.py
service/: repositories.py  service.py  setup.py
