[tool.poetry]
name = "api"
version = "0.1.0"
description = "REST API to serve driving distances of vehicles per day."
authors = ["Diego Oliveira Rodrigues <diegopso2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pymysql = "^1.1.1"
sqlalchemy = "^2.0.36"
flask = "^3.1.0"
pydantic = "^2.10.4"
cryptography = "^44.0.0"
waitress = "^3.0.2"


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.0"
pytest = "^8.3.4"
testcontainers = "^4.9.0"
ruff = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
